# 42run

./: .gitignore  CMakeLists.txt  README.md  author
project/: debug.h  main.cpp
project/UI/: UI.cpp  UI.h  namespace.h
project/UI/font/: FreeType_controller.h  font.cpp  font.h  manager.cpp  manager.h  reader.h  renderer.cpp  renderer.h  symbol.cpp  symbol.h
project/UI/frame/: frame.cpp  frame.h  renderer.cpp  renderer.h
project/UI/icon/: icon.cpp  icon.h  renderer.cpp  renderer.h
project/UI/label/: label.cpp  label.h  renderer.cpp  renderer.h
project/UI/rectangle/: rectangle.cpp  rectangle.h  renderer.cpp  renderer.h
project/UI/renderer/: renderer.h
project/UI/widget/: widget.cpp  widget.h
project/blender/: Scene.blend  Scene.blend1
project/common/: common.h  error.h  namespace.h  warning.h
project/common/abstract/: global.h  global_functionality.h  pointer_functionality.h  tag.h
project/common/debug/: debug.h
project/common/error/: error.h  warning.h
project/common/exception/: exception.h
project/common/random/: random.cpp  random.h
project/common/range/: range.h
project/engine/: engine.cpp  engine.h  namespace.h
project/engine/abstract/: OpenGL_object.h  OpenGL_wrapper.h  bitflag_wrapper.h  bitflags.h  bitflags_wrapper.h  enum_wrap.h  global.h  holder.h  object_wrap.h  pointer.h
project/engine/callback/: callback.h
project/engine/camera/: camera.cpp  camera.h
project/engine/converter/: converter.cpp  converter.h
project/engine/core/: attach_renderer.cpp  callback.cpp  connect_renderer.cpp  connect_with_global.cpp  core.cpp  core.h  default_settings.cpp  execute.cpp  fill_polygon.cpp  process_x.cpp  show_polygon_back.cpp  start.cpp  time_x.cpp  use.cpp  use_depth_test.cpp
project/engine/function/: function.h
project/engine/game_object/: game_object.cpp  game_object.h  reader.h
project/engine/interface/: callback.h  event.h  function.h  key.h  timer.h
project/engine/model/: animation.h  animation.hpp  bone.cpp  bone.h  bone.hpp  eab.h  flag.h  group.cpp  group.h  instance.cpp  instance.h  loader.cpp  loader.h  manager.cpp  manager.h  material.h  mesh.cpp  mesh.h  mesh.hpp  model.cpp  model.h  reader.h  skeleton.cpp  skeleton.h  texture.cpp  texture.h  texture.hpp  vao.h  vbo.h  vertex.h
project/engine/object_wrap/: object_wrap.h
project/engine/old_model/: eab.h  model.h  vao.h
project/engine/program/: program.cpp  program.h  shader.cpp  shader.h  shader_new.cpp  uniform.h
project/engine/renderer/: animate.cpp  callback.cpp  connect_with_global.cpp  data.cpp  render.cpp  renderer.cpp  renderer.h
project/engine/scene/: camera.cpp  camera.h  light.h  reader.h  scene.cpp  scene.h
project/engine/texture/: texture.cpp  texture.h
project/exception/: exception.h
project/game/: game.cpp  game.h  namespace.h
project/game/bonus/: bonus.h  coin.h  heal.h  protection.h
project/game/character/: character.cpp  character.h
project/game/engine_extensions/: group.h  instance.h  reader.h  timer.h
project/game/manager/: manager.cpp  manager.h
project/game/model_with_mods/: group.h  instance.h  reader.h
project/game/obstacle/: chair.h  obstacle.h
project/game/renderer/: callback.cpp  render.cpp  renderer.cpp  renderer.h  x_uniforms.cpp
project/game/room/: build_x.cpp  offset_groups.cpp  room.cpp  room.h  row.cpp  set_targets.cpp  spawn_chair.cpp  spawn_x.cpp  update.cpp  x_obstacle.cpp  x_obstacle_x.cpp  x_offset_x.cpp
project/resources/: fragment.glsl  vertex.glsl
project/resources/UI/shaders/: fragment.glsl  icon.fragment.glsl  label.fragment.glsl  label.vertex.glsl  rectangle.fragment.glsl  symbol.fragment.glsl  symbol.vertex.glsl
project/resources/engine/: main.fragment.glsl  main.vertex.glsl  shared.h
project/resources/game/models/: Chair.mtl  Character.fbx  Coin.mtl  Heal.mtl  Keyboard.mtl  Protection.mtl  Room.mtl  iMac.mtl
project/resources/game/shaders/: fragment.glsl  vertex.glsl
